2005-01-31  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/AE/mime.types: adding mime type for XUL documents.

2005-01-11  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/jsutils.py (_dict_to_js): for some reason, was improperly
	marshalling dictionaries.

2004-10-01  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/PyDO/PyDO.py (PyDOBase.get): get() for some reason had
	crazy semantics; now is equivalent to obj.dict().get().

2004-09-10  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* SkunkWeb/configure, SkunkWeb/configure.in: added psycopgcache
	module to list of services.

	* pylibs/PsycopgCache.py: adding cache module.

	* SkunkWeb/Services/psycopgcache.py: adding cache service.

	* pylibs/PyDO/psycopgconn.py (PyDOPostgreSQL.__init__): fixed
	various fatal bugs.

2004-09-02  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/AE/Cache.py (_fixPath): this has gone through various
	incarnations, and the last one appears to be broken again. I think
	this works.

	* pylibs/DT/DT.py (DT.__call__): don't use locals() mutably for
	store/unstore, use a dict.

2004-07-28  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/AE/Component.py (ComponentStackFrame.__del__):
	removing the __del__ method, as Python now can take care of circular
	references without help.

2004-07-25  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/DT/DTLexer.py: pcre has finally been removed from Python
	in 2.4a1; I rewrote this to use the re module.  

2004-05-26  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/psyco_accel.py: simplest possible service that
	invokes psyco.  Will probably be jazzed up a bit.

2004-05-12  Drew Csillag  <drew_csillag@yahoo.com>

	* SkunkWeb/util/precompile.py.in: now compiles message catalogs too

2004-04-09  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/DT/DTLexer.py (findTags): now allows files to end
	in "<".

2004-04-05  Jacob Smullyan  <smulloni@smullyan.org>
